--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "@bnb/card",
-  "version": "1.6.0",
-  "description": "A personal card for Tierney Cyren (@bitandbang)",
+  "name": "gerasim_vol",
+  "version": "1.0.0",
+  "description": "A personal card for Vladimir Gerasimenko (@gerasim_vol)",
   "main": "/bin/card.js",
-  "bin": {
-    "bitandbang": "./bin/card.js"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bnb/bitandbang.git"
+    "url": "git+https://github.com/gerasimvol/gerasim_vol_card.git"
   },
-  "homepage": "https://bnb.im",
   "scripts": {
     "prepublish": "npm run build",
     "build": "node build.js",
@@ -26,7 +22,6 @@
     "npx card",
     "business card"
   ],
-  "author": "Tierney Cyren <hello@bnb.im> (http://bnb.im)",
   "license": "MIT",
   "files": [
     "bin/card.js",
@@ -36,12 +31,5 @@
     "boxen": "^2.1.0",
     "chalk": "^2.4.1",
     "standard": "^12.0.1"
-  },
-  "bugs": {
-    "url": "https://github.com/bnb/bitandbang/issues"
-  },
-  "dependencies": {},
-  "publishConfig": {
-    "registry": "https://npm.registry.github.com/"
   }
 }
